<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="20dp"
    android:orientation="vertical"
    android:background="@color/white"
    android:fitsSystemWindows="true">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.5"/>

            <iomango.com.forestdirect.mvp.view.custom.CustomTextView
                android:layout_width="match_parent"
                android:layout_weight="4"
                android:text="@string/destination_city_label"
                style="@style/TextViewStyle.Body"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/OnTouchStyle">

            <ImageView
                android:src="@drawable/ic_my_location"
                android:contentDescription="@string/image"
                style="@style/ImageIconStyle"/>

            <iomango.com.forestdirect.mvp.view.custom.CustomEditText
                android:id="@+id/destination_edit_text"
                android:layout_width="100dp"
                android:layout_weight="4"
                android:layout_marginBottom="5dp"
                android:editable="false"
                android:hint="@string/destination_city_hint"
                style="@style/EditTextStyle.Margin"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.5"/>

            <iomango.com.forestdirect.mvp.view.custom.CustomTextView
                android:layout_width="match_parent"
                android:layout_weight="4"
                android:text="@string/check_in_label"
                style="@style/TextViewStyle.Body"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:src="@drawable/ic_event"
                android:contentDescription="@string/image"
                style="@style/ImageIconStyle"/>

            <iomango.com.forestdirect.mvp.view.custom.DatePickerEditText
                android:id="@+id/check_in_edit_text"
                android:layout_width="100dp"
                android:layout_weight="4"
                app:hint="@string/check_in_hint"
                style="@style/EditTextStyle.Margin"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.5"/>

            <iomango.com.forestdirect.mvp.view.custom.CustomTextView
                android:layout_width="match_parent"
                android:layout_weight="4"
                android:text="@string/check_out_label"
                style="@style/TextViewStyle.Body"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:src="@drawable/ic_event"
                android:contentDescription="@string/image"
                style="@style/ImageIconStyle"/>

            <iomango.com.forestdirect.mvp.view.custom.DatePickerEditText
                android:id="@+id/check_out_edit_text"
                android:layout_width="100dp"
                android:layout_weight="4"
                app:hint="@string/check_out_hint"
                style="@style/EditTextStyle.Margin"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.5"/>

            <iomango.com.forestdirect.mvp.view.custom.CustomTextView
                android:layout_width="match_parent"
                android:layout_weight="4"
                android:text="@string/adults_children_label"
                style="@style/TextViewStyle.Body"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:src="@drawable/ic_filter_outline"
                android:contentDescription="@string/image"
                style="@style/ImageIconStyle"/>

            <iomango.com.forestdirect.mvp.view.custom.DialogEditText
                android:id="@+id/guests_edit_text"
                android:layout_width="100dp"
                android:layout_weight="4"
                app:forHotels="true"
                app:hint="@string/adults_children_hint"
                style="@style/EditTextStyle.Margin"/>
        </TableRow>

    </TableLayout>

    <iomango.com.forestdirect.mvp.view.custom.CustomButton
        android:id="@+id/search_button"
        android:layout_marginBottom="20dp"
        android:layout_alignParentBottom="true"
        android:text="@string/search_label"
        style="@style/ButtonStyle"/>
</RelativeLayout>

