<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/multi_city_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="10dp"
    android:paddingBottom="30dp"
    android:background="@color/white"
    android:orientation="vertical">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="15dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.5"/>

            <iomango.com.forestdirect.mvp.view.custom.CustomTextView
                android:layout_width="match_parent"
                android:layout_weight="4"
                android:text="@string/from_label"
                style="@style/TextViewStyle.Body"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/OnTouchStyle">

            <ImageView
                app:srcCompat="@drawable/ic_flight_takeoff"
                android:contentDescription="@string/image"
                style="@style/ImageIconStyle"/>

            <iomango.com.forestdirect.mvp.view.custom.CustomEditText
                android:id="@+id/from_edit_text"
                android:layout_width="100dp"
                android:layout_weight="4"
                android:layout_marginBottom="5dp"
                android:editable="false"
                android:hint="@string/from_hint"
                style="@style/EditTextStyle.Margin"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.5"/>

            <CheckBox
                android:id="@+id/from_checkbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/include_airport_label"
                style="@style/CheckBoxStyle"/>
        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.5"/>

            <iomango.com.forestdirect.mvp.view.custom.CustomTextView
                android:layout_width="match_parent"
                android:layout_weight="4"
                android:text="@string/to_label"
                style="@style/TextViewStyle.Body"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                app:srcCompat="@drawable/ic_flight_land"
                android:contentDescription="@string/image"
                style="@style/ImageIconStyle"/>

            <iomango.com.forestdirect.mvp.view.custom.CustomEditText
                android:id="@+id/to_edit_text"
                android:layout_width="100dp"
                android:layout_weight="4"
                android:layout_marginBottom="5dp"
                android:editable="false"
                android:hint="@string/to_hint"
                style="@style/EditTextStyle.Margin"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.5"/>

            <CheckBox
                android:id="@+id/to_checkbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/include_airport_label"
                style="@style/CheckBoxStyle"/>
        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.5"/>

            <iomango.com.forestdirect.mvp.view.custom.CustomTextView
                android:layout_width="match_parent"
                android:layout_weight="4"
                android:text="@string/departure_date_label"
                style="@style/TextViewStyle.Body"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                app:srcCompat="@drawable/ic_event"
                android:contentDescription="@string/image"
                style="@style/ImageIconStyle"/>

            <iomango.com.forestdirect.mvp.view.custom.DatePickerEditText
                android:id="@+id/departure_date_edit_text"
                android:layout_width="100dp"
                android:layout_weight="4"
                app:hint="@string/departure_date_hint"
                style="@style/EditTextStyle.Margin"/>
        </TableRow>

    </TableLayout>

    <ImageButton
        android:id="@+id/delete_image_button"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginRight="20dp"
        android:layout_marginEnd="20dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        app:srcCompat="@drawable/ic_clear"
        android:background="@drawable/bg_control"
        android:contentDescription="@string/image"/>

</RelativeLayout>