<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="25dp"
        android:layout_marginStart="25dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <iomango.com.forestdirect.mvp.view.custom.CustomTextView
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_gravity="center|start"
                android:text="@string/adults_label"
                style="@style/TextViewStyle.Subheading"/>

            <iomango.com.forestdirect.mvp.view.custom.StepperView
                android:id="@+id/adults_stepper"
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:layout_weight="1"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">

            <iomango.com.forestdirect.mvp.view.custom.CustomTextView
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_gravity="center|start"
                android:text="@string/seniors_label"
                style="@style/TextViewStyle.Subheading"/>

            <iomango.com.forestdirect.mvp.view.custom.StepperView
                android:id="@+id/seniors_step"
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:layout_weight="1"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">

            <iomango.com.forestdirect.mvp.view.custom.CustomTextView
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_gravity="center|start"
                android:text="@string/children_label"
                style="@style/TextViewStyle.Subheading"/>

            <iomango.com.forestdirect.mvp.view.custom.StepperView
                android:id="@+id/children_stepper"
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:layout_weight="1"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">

            <iomango.com.forestdirect.mvp.view.custom.CustomTextView
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_gravity="center|start"
                android:text="@string/infants_label"
                style="@style/TextViewStyle.Subheading"/>

            <iomango.com.forestdirect.mvp.view.custom.StepperView
                android:id="@+id/infants_stepper"
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:layout_weight="1"/>
        </TableRow>

    </TableLayout>

</LinearLayout>